derive/tests/ui/mock_with_lifetime.rs
use mimicry_derive::Mock;

#[derive(Mock)]
struct WithLifetime<'a> {
    field: &'a (),
}

fn main() {}
